# shorts_auto

./: .env.example  .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
assets/bg_video/: _metadata.json
assets/bgm/: _metadata.json
data/: concept_log.jsonl  playlists.json  task_ShortsAuto_0700.xml  task_ShortsAuto_1530.xml  task_ShortsAuto_1800.xml  task_ShortsAuto_2200.xml  task_ShortsAuto_CleanupLogs.xml  task_ShortsAuto_CrawlRSS.xml  task_ShortsAuto_NotifySchedule.xml
docs/: CHANGELOG.md  REQUIREMENTS.md  SETUP.md  WORKLOG.md  youtube_shorts_font_size_guide.md
prompts/: block_keywords.txt  story_rewrite.txt  upload_description.txt
scripts/: _blacklist_fix.py  _check_melo.py  _melo_smoke.py  _notify_analysis.py  auth_youtube.py  cleanup_logs.bat  cleanup_logs.py  crawl_rss.bat  crawl_rss.py  download_fonts.py  fetch_assets.py  make_demo.py  make_demo_compare.py  make_demo_quality.py  make_lucky_charm_demo.py  notify_schedule.bat  notify_schedule.py  register_scheduler.ps1  run_batch.bat  run_batch.py  run_pipeline.bat  scheduler_run.bat  setup_channel_seo.py  setup_playlists.py  test_upload.py  update_channel.py  upload_lucky_charm.py  upload_pending.py  upload_thumbnails.py  upload_video.py  verify_keys.py
src/: __init__.py  config.py  db.py  db_schema.sql  main.py  repository.py
src/audio/: __init__.py  musicgen_engine.py
src/crawler/: __init__.py  base.py  llm_creator.py  reddit.py
src/notify/: __init__.py  discord_webhook.py
src/pipeline/: __init__.py  context.py  crawl_stage.py  render_stage.py  rewrite_stage.py  subtitle_stage.py  tts_stage.py  upload_stage.py
src/renderer/: __init__.py  assets.py  (+3 more)
tests/: conftest.py  test_config.py  test_content_filter.py  test_db.py  test_fetch_assets.py  test_hook_pattern.py  test_killswitch.py  test_lock.py  test_logging.py  test_melo_engine.py  test_musicgen_engine.py  test_pipeline_context.py  test_repository.py  test_similarity.py  test_speaker_selector.py
(+27 files in other folders)
